# xrandr-align

./: .gitignore  .sparkleshare  AUTHORS  COPYING  ChangeLog  Imakefile  Makefile.am  NEWS  README  SparkleShare.txt  buttonmap.c  configure.ac  feedback.c  index.html  list.c  version.c  xinput.c  xinput.h  xinput.spec  xrandr-align-gravitate.desktop  xrandr-align-monitor.desktop
.gear/: rules
.gear/tags/: list
configs/: Makefile.am  eGalax.monitor
man/: Makefile.am  xinput.man  xrandr-align-gravitate.man  xrandr-align-monitor.man  xrandr-align.man
scripts/: Makefile.am  post-align.sh  pre-align.sh  xrandr-align-gravitate  xrandr-align-monitor
scripts/post-align.d/: 10-twofing-start
scripts/pre-align.d/: 10-twofing-stop
src/: .gitignore  Makefile.am  align.c  buttonmap.c  common.c  common.h  feedback.c  gravitate.c  hierarchy.c  list.c  monitor.c  property.c  setcp.c  setint.c  setmode.c  setptr.c  state.c  test.c  test_xi2.c  version.c  xinput.c  xinput.h  xrandr-align.c  xrandr-align.h  xrandr-monitor.c  xrandr-monitor.h
