#
#  Original xinput:
#  Copyright 1996 by Frederic Lepied, France. <Frederic.Lepied@sugix.frmug.org>
#
#  Original xrandr:
#  Copyright © 2001 Keith Packard, member of The XFree86 Project, Inc.
#  Copyright © 2002 Hewlett Packard Company, Inc.
#  Copyright © 2006 Intel Corporation
#
#  xrandr-align:
#
#  Copyright © 2012 Paul Wolneykien <manowar@altlinux.org>, ALT Linux Ltd.
# 
#  Permission to use, copy, modify, distribute, and sell this software and its
#  documentation for any purpose is hereby granted without fee, provided that
#  the above copyright notice appear in all copies and that both that
#  copyright notice and this permission notice appear in supporting
#  documentation, and that the name of the author not be used in
#  advertising or publicity pertaining to distribution of the software without
#  specific, written prior permission.  The author makes no
#  representations about the suitability of this software for any purpose.  It
#  is provided "as is" without express or implied warranty.
# 
#  THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
#  INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO
#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, INDIRECT OR
#  CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE,
#  DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
#  TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
#  PERFORMANCE OF THIS SOFTWARE.

xrconfdir = $(sysconfdir)/xrandr-align
xrconf_DATA = eGalax.monitor
